--- a/BinaryMan.Core/BinaryMan.Core.csproj
+++ b/BinaryMan.Core/BinaryMan.Core.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <PackageOutputPath>$(SolutionDir)NugetOutput</PackageOutputPath>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Xianyi Cui</Authors>
-    <Version>0.1.0</Version>
+    <Version>1.0.0</Version>
     <Description>Binary management interface and core implement</Description>
   </PropertyGroup>
 
