--- a/BinaryMan.Azure/BinaryMan.Azure.csproj
+++ b/BinaryMan.Azure/BinaryMan.Azure.csproj
@@ -7,7 +7,8 @@
     <Company>Xianyi Cui</Company>
     <Authors>Xianyi Cui</Authors>
     <Description>Azure storage implement for binary management</Description>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
+    <PackageReleaseNotes>Fix key generation bug</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
